--- a/index.html
+++ b/index.html
@@ -56,23 +56,38 @@
         	</div>
 		</div>
 		<div class="row max-height">
-			<div id="now-playing" class="col-sm-4">
-				<h3 class="text-center">Movies</h3>
-				<div class="scrollit">
-					<p>Lorem ipsum dolor sit amet, donec arcu rhoncus arcu tellus volutpat dolor, sit cras accumsan quisque etiam id eget, amet neque viverra. Et fringilla ut mollis, pede eget consectetuer, eget integer tempus purus arcu suspendisse, sem in eleifend vel nibh turpis et, arcu amet at quis. Velit suspendisse vel quam sed in diam, consequat suspendisse tellus, volutpat suspendisse nunc lorem nunc ligula, dictum arcu facilisis </p>
-				</div>
+			<div id="now-playing" class="panel panel-info col-sm-4">
+				<div class="panel-heading">
+                	<h1 class="panel-movies text-center">Movies</h1>
+            	</div>
+				<div class="panel-body">
+                <table class="table table-striped">
+                    <tbody id="movie-schedule">
+                    </tbody>
+                </table>
+            	</div>
 			</div>
-			<div class="col-sm-4">
-				<h3 class="text-center">Events</h3>
-				<div id="upcoming-events" class="scroll-area">
-					<p>Lorem ipsum dolor sit amet, donec arcu rhoncus arcu tellus volutpat dolor, sit cras accumsan quisque etiam id eget, amet neque viverra. Et fringilla ut mollis, pede eget consectetuer, eget integer tempus purus arcu suspendisse, sem in eleifend vel nibh turpis et, arcu amet at quis. Velit suspendisse vel quam sed in diam, consequat suspendisse tellus, volutpat suspendisse nunc lorem nunc ligula, dictum arcu facilisis </p>
-				</div>
+			<div id="events" class="panel panel-info col-sm-4">
+				<div class="panel-heading">
+                	<h1 class="panel-events text-center">Events</h1>
+            	</div>
+				<div class="panel-body">
+                <table class="table table-striped">
+                    <tbody id="events-schedule">
+                    </tbody>
+                </table>
+            	</div>
 			</div>
-			<div class="col-sm-4">
-				<h3 class="text-center">Sports</h3>
-				<div id="upcoming-sports" class="scroll-area">
-					<p>Lorem ipsum dolor sit amet, donec arcu rhoncus arcu tellus volutpat dolor, sit cras accumsan quisque etiam id eget, amet neque viverra. Et fringilla ut mollis, pede eget consectetuer, eget integer tempus purus arcu suspendisse, sem in eleifend vel nibh turpis et, arcu amet at quis. Velit suspendisse vel quam sed in diam, consequat suspendisse tellus, volutpat suspendisse nunc lorem nunc ligula, dictum arcu facilisis </p>
-				</div>
+			<div id="sports" class="panel panel-info col-sm-4">
+				<div class="panel-heading">
+                	<h1 class="panel-sports text-center">Sports</h1>
+            	</div>
+				<div class="panel-body">
+                <table class="table table-striped">
+                    <tbody id="sports-schedule">
+                    </tbody>
+                </table>
+            	</div>
 			</div>
 		</div>
 	</div>
