--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 <!-- Adding viewport and bootstarp tags -->
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, intial-scale=1">
+	<!-- <meta name="viewport" content="width=device-width, intial-scale=1"> -->
 	<title>EventClump</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
 </head>
 
 <body data-spy="scroll" data-target="#navbar-scroll">
@@ -102,5 +102,6 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+	<script src="core.js"></script>
 </body>
 </html>
