--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 <!-- Adding viewport and bootstarp tags -->
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, intial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>EventClump</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<!-- 	<link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 
 <body data-spy="scroll" data-target="#navbar-scroll">
