Added a style.css and image folder

--- a/index.html
+++ b/index.html
@@ -92,11 +92,9 @@
 			</div>
 		</div>
 	</div>
-	<div class="navbar navbar-default navbar-fixed-bottom" id="footer">
-	  <div class="container-fluid">
+	<footer class="site-footer">
 	    <p class="text-muted text-center footer">&copy;Copyright EventClump</p>
-	  </div>
-	</div>
+	</footer>
 
 
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
