updating html and css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<body data-spy="scroll" data-target="#navbar-scroll">
+<body>
 	<div id="navbar-scroll">
 		<nav class="navbar navbar-default navbar-fixed-top nav-style">
 			<div class="container-fluid">				
