--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>EventClump</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body data-spy="scroll" data-target="#navbar-scroll">
@@ -62,7 +62,7 @@
                 	<h1 class="panel-movies text-center">Movies</h1>
             	</div>
 				<div class="panel-body">
-                <table class="table table-striped">
+                <table class="table table-striped" id="scroll">
                     <tbody id="movie-schedule">
                     </tbody>
                 </table>
@@ -73,7 +73,7 @@
                 	<h1 class="panel-events text-center">Events</h1>
             	</div>
 				<div class="panel-body">
-                <table class="table table-striped">
+                <table class="table table-striped" id="scroll">
                     <tbody id="events-schedule">
                     </tbody>
                 </table>
@@ -84,7 +84,7 @@
                 	<h1 class="panel-sports text-center">Sports</h1>
             	</div>
 				<div class="panel-body">
-                <table class="table table-striped">
+                <table class="table table-striped" id="scroll">
                     <tbody id="sports-schedule">
                     </tbody>
                 </table>
