--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	                    </ul>
 	                </div>
 	                <input type="hidden" name="search_param" value="all" id="search_param">         
-	                <input type="text" class="form-control" name="x" placeholder="Search term...">
+	                <input type="text" class="form-control" id="search-bar" name="x" placeholder="Search term...">
 	                <span class="input-group-btn">
 	                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
 	                </span>
