--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	                <input type="hidden" name="search_param" value="all" id="search_param">         
 	                <input type="text" class="form-control" id="search-bar" name="x" placeholder="Search term...">
 	                <span class="input-group-btn">
-	                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+	                    <button class="btn btn-default" type="button" id="search-go"><span class="glyphicon glyphicon-search"></span></button>
 	                </span>
 	            </div>
         	</div>
