--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 	                    	<span id="search_concept"></span> <span class="caret"></span>
 	                    </button>
 	                    <ul class="dropdown-menu" role="menu">
-	                      <li><a href="#">Zip Code</a></li>
-	                      <li><a href="#">City</a></li>
-	                      <li><a href="#">Date</a></li>
+	                      <li id="zip"><a href="#">Zip Code</a></li>
+	                      <li id="keyword"><a href="#">City</a></li>
+	                      <li id="date"><a href="#">Date</a></li>
 	                    </ul>
 	                </div>
 	                <input type="hidden" name="search_param" value="all" id="search_param">         
-	                <input type="text" class="form-control" name="x" placeholder="Search term...">
+	                <input type="text" id="search" class="form-control" name="x" placeholder="Search term...">
 	                <span class="input-group-btn">
 	                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
 	                </span>
@@ -57,33 +57,33 @@
 		</div>
 		<br>
 		<div class="row max-height">
-			<div id="now-playing" class="panel panel-info col-sm-4">
+			<div class="panel panel-info col-sm-4">
 				<div class="panel-heading">
                 	<h1 class="panel-movies text-center">Movies</h1>
             	</div>
-				<div class="panel-body">
+				<div id="now-playing" class="panel-body">
                 <table class="table table-striped">
                     <tbody id="movie-schedule">
                     </tbody>
                 </table>
             	</div>
 			</div>
-			<div id="events" class="panel panel-info col-sm-4">
+			<div class="panel panel-info col-sm-4">
 				<div class="panel-heading">
                 	<h1 class="panel-events text-center">Events</h1>
             	</div>
-				<div class="panel-body">
+				<div id="events" class="panel-body">
                 <table class="table table-striped">
                     <tbody id="events-schedule">
                     </tbody>
                 </table>
             	</div>
 			</div>
-			<div id="sports" class="panel panel-info col-sm-4">
+			<div class="panel panel-info col-sm-4">
 				<div class="panel-heading">
                 	<h1 class="panel-sports text-center">Sports</h1>
             	</div>
-				<div class="panel-body">
+				<div id="sports" class="panel-body">
                 <table class="table table-striped">
                     <tbody id="sports-schedule">
                     </tbody>
