--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 	                    </ul>
 	                </div>
 	                <input type="hidden" name="search_param" value="all" id="search_param">         
-	                <input type="text" id="search" class="form-control" name="x" placeholder="Search term...">
+	                <input type="text" id="search-bar" class="form-control" name="x" placeholder="Search term...">
 	                <span class="input-group-btn">
-	                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+	                    <button class="btn btn-default" type="button" id="search-go"><span class="glyphicon glyphicon-search"></span></button>
 	                </span>
 	            </div>
         	</div>
@@ -98,7 +98,9 @@
 
 
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js'></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+	<script src="core.js"></script>
 </body>
 </html>
