Added href for entertainment dropdown

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			      <ul class="nav navbar-nav navbar-right">
 			      	<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Entertainment <span class="caret"></span></a>
 				        <ul class="dropdown-menu">
-				          <li><a href="#">Movies</a></li>
-				          <li><a href="#">Events</a></li>
+				          <li><a href="movie.html">Movies</a></li>
+				          <li><a href="events.html">Events</a></li>
 				        </ul>
 				    </li>			  		
 				  </ul>
