updated html to make entertainment into a button when screen shrinks

--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 </head>
 
 <body>
-	<div id="navbar-scroll">
+	<div>
 		<nav class="navbar navbar-default navbar-fixed-top nav-style">
 			<div class="container-fluid">				
 				<div class="navbar-header text-center teal-back side-padding">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#Navbar">
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>                        
+			      	</button>
 					<h1 class="h1font">EventClump</h1>
 				</div>
-			      <ul class="nav navbar-nav navbar-right">
+			      <ul class="nav navbar-nav navbar-right collapse navbar-collapse" id="Navbar">
 			      	<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Entertainment <span class="caret"></span></a>
 				        <ul class="dropdown-menu">
-				          <li><a href="movie.html">Movies</a></li>
-				          <li><a href="events.html">Events</a></li>
+				          <li><a href="#">Movies</a></li>
+				          <li><a href="#">Events</a></li>
 				        </ul>
 				    </li>			  		
 				  </ul>
