--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			      <ul class="nav navbar-nav navbar-right collapse navbar-collapse" id="Navbar">
 			      	<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Entertainment <span class="caret"></span></a>
 				        <ul class="dropdown-menu">
-				          <li><a href="#">Movies</a></li>
-				          <li><a href="#">Events</a></li>
+				          <li><a href="movie.html">Movies</a></li>
+				          <li><a href="events.html">Events</a></li>
 				        </ul>
 				    </li>			  		
 				  </ul>
@@ -47,7 +47,7 @@
 	                    </button>
 	                    <ul class="dropdown-menu" role="menu">
 	                      <li id="zip"><a href="#">Zip Code</a></li>
-	                      <li id="keyword"><a href="#">City</a></li>
+	                      <li id="city"><a href="#">City</a></li>
 	                      <li id="date"><a href="#">Date</a></li>
 	                    </ul>
 	                </div>
