--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js'></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<!-- 	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script> -->
+ 	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 	<script src="core.js"></script>
 </body>
 </html>
