updated fonts for all html and added to css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>EventClump</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -19,7 +20,7 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>                        
 			      	</button>
-					<h1 class="h1font">EventClump</h1>
+					<h1 class="h1font"><a href="index.html">EventClump</a></h1>
 				</div>
 			      <ul class="nav navbar-nav navbar-right collapse navbar-collapse" id="Navbar">
 			      	<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Entertainment <span class="caret"></span></a>
