--- a/events.html
+++ b/events.html
@@ -8,6 +8,7 @@
 	<!-- Bootstrap CDN-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body data-spy="scroll" data-target="#navbar-scroll">
