updating index to remove search bar and updating css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>EventClump</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Lato|Lobster|Shojumaru" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -40,25 +40,6 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-8 col-xs-offset-2">
-			    <div class="input-group">
-	                <div class="input-group-btn search-panel">
-	                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-	                    	<span id="search_concept"></span> <span class="caret"></span>
-	                    </button>
-	                    <ul class="dropdown-menu" role="menu">
-	                      <li id="zip"><a href="#">Zip Code</a></li>
-	                      <li id="city"><a href="#">City</a></li>
-	                      <li id="date"><a href="#">Date</a></li>
-	                    </ul>
-	                </div>
-	                <input type="hidden" name="search_param" value="all" id="search_param">         
-	                <input type="text" id="search-bar" class="form-control" name="x" placeholder="Search term...">
-	                <span class="input-group-btn">
-	                    <button class="btn btn-default" type="button" id="search-go"><span class="glyphicon glyphicon-search"></span></button>
-	                </span>
-	            </div>
-        	</div>
 		</div>
 		<br>
 		<div class="row max-height">
