--- a/movie.html
+++ b/movie.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="assets/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Lato|Lobster|Shojumaru" rel="stylesheet">
 	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDPnWZ8VN8tZD-Fu3b2428gZx737yHeR9s&libraries=places"></script>
 
 </head>
@@ -55,7 +55,7 @@
 		                 </ul>
 		            </div>
 		                <input type="hidden" name="search_param" value="all" id="search_param">         
-		                <input type="text" class="form-control" name="x" placeholder="Search term...">
+		                <input type="text" class="form-control" name="x" placeholder="Enter City name or Zip code">
 		                <span class="input-group-btn">
 		                 	<button class="btn btn-default" type="button" id="search_button"><span class="glyphicon glyphicon-search"></span></button>
 		                </span>
