--- a/events.html
+++ b/events.html
@@ -234,6 +234,11 @@
 	<footer class="site-footer">
 	    <p class="text-muted text-center footer">&copy;Copyright EventClump</p>
 	</footer>
-</body>
+	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js'></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ 	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+ 	<script src="bideo.js"></script>
+  	<script src="main.js"></script>
 </body>
 </html>
