--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Lato|Lobster|Shojumaru" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<script src="https://use.typekit.net/nlq1kdt.js"></script>
+  	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 
 <body>
@@ -34,6 +36,9 @@
 		</nav>
 	</div>
 	<div class="container">
+	<video id="background_video" loop muted></video>
+	<div id="video_cover"></div>
+	<div id="overlay"></div>
 		<div class="row">
 			<div class="jumbotron">
 				<h1 id="welcome" class="text-center">Welcome</h1>
@@ -76,6 +81,8 @@
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js'></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+ 	<script src="bideo.js"></script>
+  	<script src="main.js"></script>
 	<script src="core.js"></script>
 </body>
 </html>
