--- a/movie.html
+++ b/movie.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>EventClump Movies</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- jQuery -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
