--- a/events.html
+++ b/events.html
@@ -238,7 +238,8 @@
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js'></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
- 	<script src="bideo.js"></script>
-  	<script src="main.js"></script>
+ 	<!-- <script src="bideo.js"></script> -->
+  	<!-- <script src="main.js"></script> -->
+  	<script src="assets/javascript/events.js"</script>
 </body>
 </html>
