--- a/events.html
+++ b/events.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
-	<title>EventClump Events</title>
-
+	<meta charset="UTF-8">
+	<title>EventClump Movies</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Bootstrap CDN-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Lato|Lobster|Shojumaru" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Lato|Lobster|Shojumaru" rel="stylesheet">
+	<script src="https://use.typekit.net/nlq1kdt.js"></script>
+  	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDPnWZ8VN8tZD-Fu3b2428gZx737yHeR9s&libraries=places"></script>
 </head>
 <body data-spy="scroll" data-target="#navbar-scroll">
 	<div>
@@ -35,12 +37,15 @@
 		</nav>
 	</div>
 	<div class="container">
-		<div class="row">
+	<video id="background_video" loop muted></video>
+		<div id="video_cover"></div>
+		<div id="overlay"></div>
+<!-- 		<div class="row">
 			<div class="jumbotron">
 				<h1 id="welcome" class="text-center">Welcome</h1>
 			</div>
 		</div>
-		<div class="row">
+ -->		<div class="row">
 			<div class="col-xs-8 col-xs-offset-2">
 				<div class="input-group">
 		            <div class="input-group-btn search-panel">
@@ -133,44 +138,6 @@
 
 					</div>
 					<!-- End  Comedy Gallery-->
-
-					<!-- Comedy Sub Heading -->
-					<div class="row">
-						<div class="col-md-12 currentevents" >
-								<h3>Sports </h3>
-								<hr>
-						</div>
-					</div>
-					<!-- End Sub Heading -->
-
-					<!-- Start  Comedy Gallery-->
-					<div class="row" id="sports-gallery">
-
-							<div class="col-xs-2 col-sm-2 col-md-2">
-								<div class="event-card">
-									<a  href="#">
-										<div class="event-poster-container">
-											<img class="img-thumbnail" src="images/bruno-mars.png">
-										</div></a>
-										<div class="text-center performer" > Bruno Mars</div>
-									
-								</div>
-							</div>
-
-							<div class="col-xs-2 col-sm-2 col-md-2">
-							</div>
-							<div class="col-xs-2 col-sm-2 col-md-2">
-							</div>
-							<div class="col-xs-2 col-sm-2 col-md-2">
-							</div>
-							<div class="col-xs-2 col-sm-2 col-md-2">
-							</div>
-							<div class="col-xs-2 col-sm-2 col-md-2">
-							</div>
-
-					</div>
-					<!-- End  Comedy Gallery-->
-
 			</div>	<!-- End Event Panel<div class="col-md-12  -->
 
 
@@ -181,17 +148,15 @@
 	    <p class="text-muted text-center footer">&copy;Copyright EventClump</p>
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-  	<!-- jQuery -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-	<!-- Calling  JS for google maps & modal box-->
-	<script type="text/javascript" src="assets/javascript/map.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDPnWZ8VN8tZD-Fu3b2428gZx737yHeR9s&libraries=places"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js'></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
-  <script src="assets/javascript/events.js"</script>
  	<script src="bideo.js"></script>
-  <script src="main.js"></script>
+  	<script src="main.js"></script>
+  	<script src="event.js"></script>
+	<!-- Calling  JS for google maps & modal box-->
+	<script type="text/javascript" src="assets/javascript/map.js"></script>
 </body>
 </html>
