--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 	<video id="background_video" loop muted></video>
 	<div id="video_cover"></div>
 	<div id="overlay"></div>
-		<div class="row">
+<!-- 		<div class="row">
 			<div class="jumbotron">
 				<h1 id="welcome" class="text-center">Welcome</h1>
 			</div>
-		</div>
+		</div> -->
 		<div class="row">
 		</div>
 		<br>
