--- a/movie.html
+++ b/movie.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
+
 <head>
+	<meta charset="UTF-8">
 	<title>EventClump Movies</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- jQuery -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 	<!-- Bootstrap CDN-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Lato|Lobster|Shojumaru" rel="stylesheet">
 	<script src="https://use.typekit.net/nlq1kdt.js"></script>
   	<script>try{Typekit.load({ async: true });}catch(e){}</script>
-	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDPnWZ8VN8tZD-Fu3b2428gZx737yHeR9s&libraries=places"></script>
 
 </head>
 <body>
@@ -42,11 +41,11 @@
 	<video id="background_video" loop muted></video>
 		<div id="video_cover"></div>
 		<div id="overlay"></div>
-		<div class="row">
+<!-- 		<div class="row">
 			<div class="jumbotron">
 				<h1 id="welcome" class="text-center">Welcome</h1>
 			</div>
-		</div>
+		</div> -->
 		<div class="row">
 			<div class="col-xs-8 col-xs-offset-2">
 				<div class="input-group">
@@ -192,6 +191,7 @@
 	    <p class="text-muted text-center footer">&copy;Copyright EventClump</p>
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDPnWZ8VN8tZD-Fu3b2428gZx737yHeR9s&libraries=places"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js'></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
