updated html files and css files for google map size

--- a/events.html
+++ b/events.html
@@ -70,7 +70,7 @@
 		<div class="row movie-panel">
 			<div class="col-md-12 well well-lg events-panel-main"> 
 					<div class="row">
-						<div class="col-md-12">
+						<div class="col-md-12 eventLocation">
 							<h4 id="city">Events In San Francisco</h4>
 							<hr class="cityhr">
 
