--- a/movie.html
+++ b/movie.html
@@ -70,8 +70,8 @@
 		<div class="row movie-panel">
 			<div class="col-md-8 well well-lg movie-panel-main"> 
 				<div class="row">
-					<div class="col-md-12">
-						<h4 id="city">Movies In San Francisco</h4>
+					<div class="col-md-12 theaterLocation">
+						<h4 id="city">Theaters in your area</h4>
 						<hr class="cityhr">
 
 						<div class="embed-responsive embed-responsive-16by9" id="location">
