updated css and map.js file

--- a/movie.html
+++ b/movie.html
@@ -115,21 +115,22 @@
 					</div>
 				</div>
 				<!--<div class="row" id="movie-gallery"> -->
+				<div class="container movie-container">
 				<div class="row" id="movie-gallery">
 						<!-- No Playing Movie items block start -->
-						<div class="col-xs-6 col-md-3">
+						<div class="col-xs-6 col-md-12">
 							<div class="movie-card">
 	
-									<div class="movie-posters-container">
+								<!-- 	<div class="movie-posters-container">
 										<img class="img-thumbnail" src="images/transformers.jpg" movie-id="6Vtf0MszgP8">
 									</div>
 									<div class="text-center moviename" > Transformers</div>
-									<div class="text-center rating">PG - 13</div>
+									<div class="text-center rating">PG - 13</div> -->
 							</div>
 						</div>	<!-- No Playing Movie items block start -->
 								
 				</div> <!--<div class="row" id="movie-gallery"> -->
-
+				</div>
 			</div>	<!-- <div class="col-md-8  -->
 
 
