--- a/events.html
+++ b/events.html
@@ -7,7 +7,6 @@
 
 	<!-- Bootstrap CDN-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Lato|Lobster|Shojumaru" rel="stylesheet">
 	<script src="https://use.typekit.net/nlq1kdt.js"></script>
@@ -155,7 +154,7 @@
  	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
  	<script src="bideo.js"></script>
   	<script src="main.js"></script>
-  	<script src="event.js"></script>
+  	<!-- <script type="text/javascript" src="assets/javascript/events.js"></script> -->
 	<!-- Calling  JS for google maps & modal box-->
 	<script type="text/javascript" src="assets/javascript/map.js"></script>
 </body>
