removed spiderman hard code for upcoming movies

--- a/movie.html
+++ b/movie.html
@@ -148,13 +148,13 @@
 						<div class="col-xs-4 col-sm-6 col-md-12" >
 							<div class="movie-card">
 					
-									<div>
+									<!-- <div>
 										<img class="img-thumbnail" src="images/spider-man.jpg" movie-id="DiTECkLZ8HM">
-									</div>
+									</div> -->
 
 								<!-- </a> -->
-								<div class="text-left moviename">Spider Man</div>
-								<div class="text-left rating">PG - 13</div>
+								<!-- <div class="text-left moviename">Spider Man</div>
+								<div class="text-left rating">PG - 13</div> -->
 
 							</div>
 						</div>
