--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js'></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDPnWZ8VN8tZD-Fu3b2428gZx737yHeR9s&libraries=places"></script>
  	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
  	<script src="bideo.js"></script>
   	<script src="main.js"></script>
