pausing reset for tonight

--- a/events.html
+++ b/events.html
@@ -156,6 +156,6 @@
   	<script src="main.js"></script>
   	<!-- <script type="text/javascript" src="assets/javascript/events.js"></script> -->
 	<!-- Calling  JS for google maps & modal box-->
-	<script type="text/javascript" src="assets/javascript/map.js"></script>
+	<script type="text/javascript" src="assets/javascript/events.js"></script>
 </body>
 </html>
