--- a/events.html
+++ b/events.html
@@ -47,21 +47,13 @@
  -->		<div class="row">
 			<div class="col-xs-8 col-xs-offset-2">
 				<div class="input-group">
-		            <div class="input-group-btn search-panel">
-		                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-		                    <span id="search_concept"></span> <span class="caret"></span>
-		                </button>
-		                 <ul class="dropdown-menu" role="menu">
-		                      <li><a href="#">Zip Code</a></li>
-		                      <li><a href="#">City</a></li>
-		                      <li><a href="#">Date</a></li>
-		                 </ul>
-		            </div>
-		                <input type="hidden" name="search_param" value="all" id="search_param">         
-		                <input type="text" class="form-control" name="x" placeholder="Search term...">
-		                <span class="input-group-btn">
-		                 	<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
-		                </span>
+                	<input type="hidden" name="search_param" value="all" id="search_param">         
+                	<input type="text" class="form-control" name="x" placeholder="Enter Zip Code or Address">
+                	<span class="input-group-btn">
+                 		<button class="btn btn-default" type="button" id="search_button">
+                 			<span class="glyphicon glyphicon-search"></span>
+                 		</button>
+                	</span>
 		        </div>
 	        </div>
 		</div>
